--- a/touchegg.conf
+++ b/touchegg.conf
@@ -1,6 +1,6 @@
 <touchégg>
   <settings>
-    <property name="animation_delay">130</property>
+    <property name="animation_delay">150</property>
     <property name="action_execute_threshold">10</property>
     <property name="color">auto</property>
     <property name="borderColor">auto</property>
@@ -66,6 +66,15 @@
         <on>begin</on>
       </action>
     </gesture>
+    <gesture type="PINCH" fingers="2" direction="OUT">
+      <action type="SEND_KEYS">
+        <modifiers>Control_L</modifiers>
+        <keys>KP_Add</keys>
+        <repeat>true</repeat>
+        <animation>NONE</animation>
+        <decreaseKeys></decreaseKeys>
+      </action>
+    </gesture>
     <gesture type="PINCH" fingers="2" direction="IN">
       <action type="SEND_KEYS">
         <modifiers>Control_L</modifiers>
@@ -75,13 +84,212 @@
         <decreaseKeys></decreaseKeys>
       </action>
     </gesture>
+  </application>
+  <application name="brave-browser">
+    <gesture type="PINCH" fingers="2" direction="IN">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>KP_Subtract</keys>
+        <decreaseKeys>KP_Add</decreaseKeys>
+      </action>
+    </gesture>
     <gesture type="PINCH" fingers="2" direction="OUT">
       <action type="SEND_KEYS">
+        <repeat>true</repeat>
         <modifiers>Control_L</modifiers>
         <keys>KP_Add</keys>
+        <decreaseKeys>KP_Subtract</decreaseKeys>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="RIGHT">
+      <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>KP_Left</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="LEFT">
+      <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>KP_Right</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="4" direction="IN">
+      <action type="SEND_KEYS">
         <repeat>true</repeat>
-        <animation>NONE</animation>
-        <decreaseKeys></decreaseKeys>
+        <modifiers>Control_L</modifiers>
+        <keys>Shift_L+Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="4" direction="OUT">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+        <on>begin</on>
+      </action>
+    </gesture>
+  </application>
+  <application name="chromium">
+    <gesture type="PINCH" fingers="2" direction="IN">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>KP_Subtract</keys>
+        <decreaseKeys>KP_Add</decreaseKeys>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="2" direction="OUT">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>KP_Add</keys>
+        <decreaseKeys>KP_Subtract</decreaseKeys>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="RIGHT">
+      <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>KP_Left</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="LEFT">
+      <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>KP_Right</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="4" direction="IN">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>Shift_L+Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="4" direction="OUT">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+        <on>begin</on>
+      </action>
+    </gesture>
+  </application>
+  <application name="firefox">
+    <gesture type="PINCH" fingers="2" direction="IN">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>KP_Subtract</keys>
+        <decreaseKeys>KP_Add</decreaseKeys>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="2" direction="OUT">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>KP_Add</keys>
+        <decreaseKeys>KP_Subtract</decreaseKeys>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="RIGHT">
+      <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>KP_Left</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="LEFT">
+      <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>KP_Right</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="4" direction="IN">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>Shift_L+Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="4" direction="OUT">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+        <on>begin</on>
+      </action>
+    </gesture>
+  </application>
+  <application name="google-chrome">
+    <gesture type="PINCH" fingers="2" direction="IN">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>KP_Subtract</keys>
+        <decreaseKeys>KP_Add</decreaseKeys>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="2" direction="OUT">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>KP_Add</keys>
+        <decreaseKeys>KP_Subtract</decreaseKeys>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="RIGHT">
+      <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>KP_Left</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="LEFT">
+      <action type="SEND_KEYS">
+        <repeat>false</repeat>
+        <modifiers>Alt_L</modifiers>
+        <keys>KP_Right</keys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="4" direction="IN">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>Shift_L+Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="4" direction="OUT">
+      <action type="SEND_KEYS">
+        <repeat>true</repeat>
+        <modifiers>Control_L</modifiers>
+        <keys>Tab</keys>
+        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+        <on>begin</on>
       </action>
     </gesture>
   </application>
